fix header vertical-align with bootstrap flexbox

--- a/src/assets/scss/_pages.scss
+++ b/src/assets/scss/_pages.scss
@@ -2,9 +2,7 @@
 .index-page {
 
     .page-header {
-        min-height: 100vh;
-        max-height: 999px;
-        padding: 0;
+        padding: 80px 0 60px 0;
         color: $white-color;
         background-color: #323c6f;
         position: relative;
@@ -24,12 +22,6 @@
         &:before{
             background-color: rgba(0,0,0,.3);
         }
-        
-        // > .container{
-        //     z-index: 2;
-        //     padding-top: 12vh;
-        //     padding-bottom: 40px;
-        // }
     
         .page-header-image{
             position: absolute;
@@ -58,26 +50,8 @@
     
         .hero-img {
             width: 65%;
-            z-index: -1;
-            position: absolute;
-            right: 0;
-            top: 50%;
-            transform: translate(0, -50%);
-        }
-    
-        .content-center{
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            z-index: 2;
-            -ms-transform: translate(-50%, -50%);
-            -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-            text-align: center;
-            color: #FFFFFF;
-            padding: 0 15px;
-            width: 100%;
-            max-width: 880px;
+            float: right;
+            margin-right: 50px;
         }
         
         .container {
@@ -98,7 +72,7 @@
     
         .category,
         .description{
-        color: $opacity-8;
+            color: $opacity-8;
         }
     }
 
@@ -111,14 +85,12 @@
 
     @media screen and (max-width: 768px){
         .page-header {
-            .hero {
-                .hero-img {
-                    display: none;
-                }
-                .hero-text {
-                    width: 95%;
-                    text-align: center;
-                }
+            .hero-img {
+                display: none;
+            }
+            .hero-text {
+                width: 95%;
+                text-align: center;
             }
         }
     }
